syntax = "proto3";

option csharp_namespace = "server.api.gRPC";

package weather;

import "google/api/annotations.proto";

service Weather {
  rpc GetWet (WeatherRequest) returns (WeatherReply){
	  option (google.api.http) = {
		  get: "/weatherforecase2"
	  };
  }
}

message WeatherRequest {
}

message WeatherReply {
  string Wadup = 1;
}